<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/pref_language_title"
        android:key="@string/pref_language_key"
        android:defaultValue="@string/pref_language_value_ru"
        android:summary="%s"
        android:entries="@array/pref_language_options"
        android:entryValues="@array/pref_language_values"/>

    <ListPreference
        android:title="@string/pref_sorting_label"
        android:key="@string/pref_sorting_key"
        android:summary="%s"
        android:defaultValue="@string/pref_sorting_value_popular"
        android:entries="@array/pref_sorting_options"
        android:entryValues="@array/pref_sorting_values"/>


    <EditTextPreference
        android:title="@string/pref_page_title"
        android:key="@string/pref_page_key"
        android:defaultValue="@string/pref_page_def_value"
        />

</PreferenceScreen>